2011-02-20  Kevin B, Kenny  <kennykb@acm.org>

	* tests/tdbcodbc.test (tdbc::odbc-30.[45]):
			Added tests for [allrows] and [foreach] on multiple
			result sets.

	* generic/tdbcodbc.c (ResultSetNextresultsMethod):
	* tests/tdbcodbc.test (tdbc::odbc-{30.6,31.1}:
		Made 'rowcount' work for multiple result sets. Added a
		test for 'rowcount' in multiple result sets, and added
		a rudimentary test that stored procedures can be called.
	* library/tdbcodbc.tcl (tdbc::odbc::resultset preparecall)
		Added a non-executed sketch of how a preparse of
		a prepared statement call might go in order to allow
		the use of SQLProcedureColumns to determine parameter
		directions. (This code may or may not be used; a first
		experiment would simply be to make all SP parameters
		'inout' and see if that works.)

2011-01-26  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_odbc.n:
	Added empty comment at the start of each manpage because 'man'
	interprets comments there as directives. Thanks to Konstantin
	Kohmoutov for reporting and diagnosing this error.

2011-01-22  Kevin B. Kenny  <kennykb@acm.org>

	* odbcStubDefs.txt: Added SQLMoreResults, needed for multiple result
	                    sets.
	* odbcStubInit.c:
	* odbcStubs.h:    make genstubs
	* tdbcodbc.c: Added a 'moreresults' method to the result set object
	              to allow for SQL statements that return multiple result
	              sets.
	              Fixed a resource leak in the case where bad parameters
	              are supplied to the 'foreignkeys' method.
	* tdbcodbc.test: Added tests that the 'moreresults' method works
	                 correctly in the event of 0, 1, and more than one
	                 result set.

2010-09-03  Kevin B. Kenny  <kennykb@acm.org>

	* tdbcodbc.test: Made tests more portable.

	* generic/odbcStubDefs.txt:
	* generic/tdbcodbc.c:
	* library/tdbcodbc.tcl:
	* tests/tdbcodbc.test:
			Added the 'primarykeys' and 'foreignkeys' methods,
			and the corresponding tests.