@@ -1,3 +1,12 @@
+2011-02-21  Kevin B. Kenny  <kennykb@acm.org>
+
+	* generic/tdbcodbc.c (GetCell):
+		(It is hoped) Fix a crash where an error is returned
+		from SQLGetData. (Bug [8766b8dc40], partial fix.)
+	* tests/tdbcodbc.test:
+		Code formatting changes to avoid long lines and spurious
+		semicolons.
+
 2011-02-20  Kevin B, Kenny  <kennykb@acm.org>
 
 	* tests/tdbcodbc.test (tdbc::odbc-30.[45]):
